typesafe-builders/tests/ui/reject/field_attr/unknown_2.rs
use typesafe_builders::prelude::*;

#[derive(Builder)]
struct Struct {
	#[optional]
	x: u8,
}

fn main() { }
