typesafe-builders/tests/ui/reject/field_attr/unknown_2.stderr
error: Expected builder attribute to be a list
 --> tests/ui/reject/field_attr/unknown_2.rs:5:2
  |
5 |     #[optional]
  |     ^^^^^^^^^^^

error: cannot find attribute `optional` in this scope
 --> tests/ui/reject/field_attr/unknown_2.rs:5:4
  |
5 |     #[optional]
  |       ^^^^^^^^
